--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9, <3.10"
 pydantic = "^1.9.1"
 pytest = "^7.1.2"
 matplotlib = "^3.5.2"
+pandas = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 
